add preloader and error caution

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@
     --color-unaccent: #808080; 
     --color-dark: #a1a1a1;
 
+    --color-error-light: #e04040;
+    
+
     --spacing-small: 10px;
     --spacing-medium: 15px;
     --spacing-large: 30px;
